# RQt_synced_recording_system

./: Car_Sensors_Recording.perspective  bag_to_images.py  bridge_setup.bash  ros1_nodes.launch
rqt_bag_playback/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_bag_playback/launch/: rqt_bag.launch
rqt_bag_playback/resource/: bag_widget.ui
rqt_bag_playback/scripts/: rqt_bag_playback
rqt_bag_playback/src/rqt_bag_playback/: __init__.py  bag.py  bag_timeline.py  bag_widget.py  node_selection.py  player.py  recorder.py  timeline_frame.py  topic_selection.py
rqt_bag_playback/src/rqt_bag_playback/plugins/: message_view.py  plugin.py
rqt_car_sensors_rec/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_car_sensors_rec/resource/: CarSensorsRec.ui  CarSensorsRecIcons.qrc  CarSensorsRec_presync.ui  __InsDisplay.ui__
rqt_car_sensors_rec/scripts/: rqt_car_sensors_rec
rqt_car_sensors_rec/src/rqt_car_sensors_rec/: car_sensors_rec.py  code2topic.json
rqt_ins_display/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_ins_display/resource/: InsDisplay.ui
rqt_ins_display/scripts/: rqt_ins_display
rqt_ins_display/src/rqt_ins_display/: ins_display.py
sensors_synchronizer/: CMakeLists.txt  package.xml
sensors_synchronizer/launch/: sensors_synchronizer.launch
sensors_synchronizer/src/: sensors_synchronizer.py
